# capbot

./: .gitignore  README.md
capbot/: Cargo.toml
capbot/src/: config.rs  main.rs  server.rs
capbot/src/bot/: handler.rs  mod.rs
capbot/src/bot/commands/: mod.rs  view.rs
capbot/src/bot/controls/: bot_status.rs  help.rs  level.rs  mod.rs
